# IntraNet

./: .gitignore  AGENTS.md  IntradayNet_Architecture_Plan.md.resolved  PROJECT_REPORT.md  README.md  README_morning_picks.md  REBUILD_PROGRESS.md  SYSTEM_DOCUMENTATION.md  optinet_data_builder.py  paper_trade_complete_results.json  pyproject.toml  results_sample.json  signal_audit_nifty100.json  signal_audit_results.json  test_picks.py  walkforward_results.json
archive/: README.md
configs/: intraday_config.yaml
data/: README.md
docs/: COMPREHENSIVE_RESULTS.md  COMPREHENSIVE_RESULTS_FIXED.md  CRITICAL_ANALYSIS_LEAKAGE_AUDIT.md  FINAL_SUMMARY.md  FIXES_COMPLETE_SUMMARY.md  OPTINET_V1.md  PLAN.md  README_morning_picks.md  REBUILD_COMPLETE.md  REPOSITORY_ORGANIZATION_COMPLETE.md  REVIEW.md  ROBUST_TRADING_WORKFLOW.md  SYSTEM_REPORT.md  TRAINING_BACKTEST_SUMMARY.md  TWO_DAY_TRADING_SYSTEM.md  V3_COMPLETE_IMPLEMENTATION.md  V3_HONEST_ASSESSMENT_COMPLETE.md  V3_IMPLEMENTATION_SUMMARY.md  V3_REAL_DATA_TRAINING_RESULTS.md  architecture.md  backtest_report.md  paper_trading_runbook.md
models/: model_summary.json  test_model.pkl
results/: FINAL_COMPARISON.json
scripts/: adversarial_validation.py  analyze_feature_importance.py  analyze_feature_importance_fixed.py  audit_features.py  backtest_fast.py  backtest_futures_engine.py  backtest_futures_long.py  backtest_intraday.py  backtest_intraday_2025.py  backtest_lgbm_v2.py  backtest_optinet.py  backtest_pit_2025.py  backtest_predictions.py  backtest_pro.py  backtest_v3.py  backtest_v4.py  backtest_v8.py  broker_shadow.py  build_v5_futures.py  closing_hour_strategy.py  complete_all_phases.py  complete_all_phases_fast.py  convert_to_parquet.py  create_v6_advanced_features.py  daily_health_check.py  equity_paper_ledger.py  evaluate_equity.py  evaluate_optinet.py  extended_backtest_v3.py  extended_backtest_v3_fixed.py  feature_analysis.py  final_comparison.py  forward_walk_2024_2026.py  gate_v5.py  generate_live_picks.py  health_check.py  hit_rate.py  kite_backfill.py  kite_eod_cache.py  kite_login.py  (+93 more)
tests/: run_tests.py  test_calibrator.py  test_cli.py  test_equity_paper.py  test_features.py  (+9 more)
(+309 files in other folders)
