[project]
name = "intradaynet"
version = "0.1.0"
description = "Dedicated intraday prediction model for Indian equities using TCN + Attention"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "lightgbm>=4.0",
    "rich>=13.0",
    "yfinance>=0.2.54",
    "kiteconnect==5.0.1",
    "pyotp==2.9.0",
    "requests==2.32.3",
]

[project.scripts]
intradaynet = "intradaynet.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/intradaynet", "src/optinet"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
