[project]
name = "nifty-trader"
version = "0.2.0"
description = "Intraday NIFTY futures trading system — ML signal engine, live execution, paper trading"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "lightgbm>=4.0",
    "rich>=13.0",
    "yfinance>=0.2.54",
    "kiteconnect==5.0.1",
    "pyotp==2.9.0",
    "requests==2.32.3",
]

[project.scripts]
nifty-trader = "equity.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/engine", "src/broker", "src/equity", "src/index_options"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
